@startuml
title TECH INTERVIEW ASSISTANT - SYSTEM ENTITY RELATIONSHIP DIAGRAM
!theme plain
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam shadowing false

package "Identity Service" #E3F2FD {
    entity "User" as user {
        - id : UUID <<PK>>
        --
        - email : VARCHAR(100) <<UNIQUE>>
        - password : VARCHAR(255)
        - username : VARCHAR(100)
        - created_at : TIMESTAMPTZ
    }

    entity "Role" as role {
        - id : SERIAL <<PK>>
        --
        - name : VARCHAR(20) <<UNIQUE>>
    }

    entity "Permission" as permission {
        - permission_id : VARCHAR(50) <<PK>>
        --
        - description : VARCHAR(255)
    }

    entity "UserRole" as user_role {
        - user_id : UUID <<FK>>
        - role_id : INTEGER <<FK>>
        --
        - PRIMARY KEY (user_id, role_id)
    }

    entity "RolePermission" as role_permission {
        - role_id : INTEGER <<FK>>
        - permission_id : VARCHAR(50) <<FK>>
        --
        - PRIMARY KEY (role_id, permission_id)
    }
}

package "Candidate Service" #F1F8E9 {
    entity "Candidate" as candidate {
        - id : UUID <<PK>>
        --
        - user_id : UUID <<FK>>
        - full_name : VARCHAR(100)
        - phone : VARCHAR(20)
        - current_job : VARCHAR(100)
        - updated_at : TIMESTAMPTZ
    }

    entity "Resume" as resume {
        - id : UUID <<PK>>
        --
        - candidate_id : UUID <<FK>>
        - file_path : VARCHAR(255)
        - extracted_text : TEXT
        - parsed_data : JSONB
        - uploaded_at : TIMESTAMPTZ
    }

    entity "CandidateSkill" as skill {
        - id : SERIAL <<PK>>
        --
        - candidate_id : UUID <<FK>>
        - skill_name : VARCHAR(50)
        - exp_years : INTEGER
    }
}

package "Interview Service" #FFFDE7 {
    entity "JobDescription" as jd {
        - id : UUID <<PK>>
        --
        - created_by : UUID <<FK>>
        - title : VARCHAR(255)
        - content : TEXT
        - core_skills : TEXT[]
        - created_at : TIMESTAMPTZ
        - updated_at : TIMESTAMPTZ
    }

    entity "InterviewSession" as session {
        - id : UUID <<PK>>
        --
        - candidate_id : UUID <<FK>>
        - jd_id : UUID <<FK>>
        - recruiter_id : UUID <<FK>>
        - status : ENUM
        - scheduled_at : TIMESTAMPTZ
        - created_at : TIMESTAMPTZ
        - completed_at : TIMESTAMPTZ
        - updated_at : TIMESTAMPTZ
    }

    entity "InterviewQuestion" as question {
        - id : UUID <<PK>>
        --
        - session_id : UUID <<FK>>
        - question_text : TEXT
        - expected_answer : TEXT
        - ai_generated : BOOLEAN
        - time_limit : INTEGER
        - created_at : TIMESTAMPTZ
    }

    entity "InterviewEvaluation" as evaluation {
        - id : UUID <<PK>>
        --
        - question_id : UUID <<FK>>
        - candidate_answer : TEXT
        - score : INTEGER
        - score_details : JSONB
        - ai_feedback : TEXT
        - created_at : TIMESTAMPTZ
    }
}

' Identity Internal Relationships
user ||--o{ user_role
role ||--o{ user_role
role ||--o{ role_permission
permission ||--o{ role_permission

' Candidate Internal Relationships
candidate ||--o{ resume
candidate ||--o{ skill

' Interview Internal Relationships
jd ||--o{ session
session ||--o{ question
question ||--|| evaluation

' Cross-Service Logical References
user .[#blue]. candidate : "1:1 Reference"
session .[#blue]. candidate : "Target"
session .[#blue]. user : "Recruiter Reference"
jd .[#blue]. user : "Creator Reference"

note right of session::status
  PENDING
  IN_PROGRESS
  COMPLETED
  CANCELLED
end note

@enduml